--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@popperjs/core": "^2.11.6",
+    "@vueuse/motion": "^2.0.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.2.2",
     "bootstrap-vue-3": "^0.3.11",
@@ -40,6 +41,7 @@
     "jsdom": "^20.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "sass": "^1.69.3",
     "typescript": "^4.8.4",
     "vite": "^3.1.0",
     "vitest": "^0.24.1",
